fix: background color for tags on mobile

--- a/src/styles/tailwind/base.css
+++ b/src/styles/tailwind/base.css
@@ -53,4 +53,8 @@ body {
     @apply md:px-24;
 }
 
+.active-link {
+    @apply bg-primary-accent !important;
+}
+
 @tailwind utilities;
